Updated drop down values for mobile

--- a/CalOrdersJET/src/js/views/productSearch.html
+++ b/CalOrdersJET/src/js/views/productSearch.html
@@ -210,18 +210,64 @@
                                     optionChange: productSelectChange,
                                                   option: selectedProductMenuItem,
                                                   rootAttributes: {style:'max-width:20em'}}">
-                                <optgroup label="Hardware">
-                                    <option value="DESK" selected="selected">Desktops</option>
-                                    <option value="LAPT" >Laptops</option>
-                                    <option value="MONT" >Monitors</option>
-                                    <option value="PRNT" >Printers</option>
-                                    <option value="PERI" >Peripherals</option>
+                                
+
+                                        <optgroup label="Desktop Computers">
+                                            <option value="DHST" selected="selected">Standard</option>
+                                            <option value="DHPO" >Power</option>
+                                            <option value="DHWO" >Workstation</option>
+                                            <option value="DHTH" >Thin Client</option>
+                                            <option value="DHAL" >All in One</option>
+                                        </optgroup>
+                                        <optgroup label="Desktop Upgrades">
+                                            <option value="DUST" >Standard</option>
+                                            <option value="DUPO" >Power</option>
+                                            <option value="DUWO" >Workstation</option>
+                                            <option value="DUTH" >Thin Client</option>
+                                            <option value="DUAL" >All in One</option>
+                                        </optgroup>
+                                        <optgroup label="Desktop Services">
+                                            <option value="DSST" >Standard</option>
+                                            <option value="DSPO" >Power</option>
+                                            <option value="DSWO" >Workstation</option>
+                                            <option value="DSTH" >Thin Client</option>
+                                            <option value="DSAL" >All in One</option>
+                                        </optgroup>
+                                
+                                        <optgroup label="Laptop Computers">
+                                            <option value="LHST" >Standard</option>
+                                            <option value="LHPO" >Power</option>
+                                            <option value="LHUL" >Ultralight</option>
+                                            <option value="LHMO" >Mobile</option>
+                                        </optgroup>
+                                        <optgroup label="Laptop Upgrades">
+                                            <option value="LUST" >Standard</option>
+                                            <option value="LUPO" >Power</option>
+                                            <option value="LUUL" >Ultralight</option>
+                                            <option value="LUMO" >Mobile</option>
+                                        </optgroup>
+                                        <optgroup label="Laptop Services">
+                                            <option value="LSST" >Standard</option>
+                                            <option value="LSPO" >Power</option>
+                                            <option value="LSUL" >Ultralight</option>
+                                            <option value="LSMO" >Mobile</option>
+                                        </optgroup>
+                                
+                                <optgroup label="Monitors">
+                                    <option value="DMMO">Monitors</option>
+                                    <option value="DUMO">Monitor Upgrades</option>
                                 </optgroup>
+                                
                                 <optgroup label="Software">
                                     <option value="OPSY">OS</option>
                                     <option value="OFFC">Office</option>
-                                    <option value="SECC">Security</option>
                                     <option value="UTIL">Utilities</option>
+                                    <option value="SECC">Security</option>
+                                </optgroup>
+                                
+                                <optgroup label="Independent Services">
+                                    <option value="DAAL">Desktop Services</option>
+                                    <option value="LAAL">Laptop Services</option>
                                 </optgroup>
                             </select>
                         </div>
