--- a/CalOrdersJET/src/js/views/productSearch.html
+++ b/CalOrdersJET/src/js/views/productSearch.html
@@ -283,7 +283,7 @@
                             <!-- Product search field -->
                             <div class="oj-flex-item oj-sm-8  oj-flex">
                                 <div class="oj-flex-item" style="max-width: 400px; white-space: nowrap;  float: left">
-                                    <input aria-label="search box" placeholder="search" data-bind="value: nameSearch, valueUpdate: 'afterkeydown', ojComponent: {component: 'ojInputText', rootAttributes:{'style':'max-width:100%;'}}"/>
+                                    <input aria-label="search box" placeholder="filter" data-bind="value: nameSearch, valueUpdate: 'afterkeydown', ojComponent: {component: 'ojInputText', rootAttributes:{'style':'max-width:100%;'}}"/>
                                     <div id="searchIcon" class="demo-icon-sprite demo-icon-search demo-search-position"></div>
                                 </div>
                             </div>
