--- a/CalOrdersJET/src/js/views/cart.html
+++ b/CalOrdersJET/src/js/views/cart.html
@@ -25,7 +25,7 @@
 
     <!-- Page Title -->
     <div id="pageTitleContainer" class="oj-flex-item oj-sm-6">
-        <h1 style="margin-bottom:0">CalOrders Cart</h1>
+        <h2 style="margin-bottom:0">Cart</h2>
     </div>
 
     <!-- Action buttons (Continue Shopping and Order)-->
