--- a/CalOrdersJET/src/js/views/dashboard.html
+++ b/CalOrdersJET/src/js/views/dashboard.html
@@ -22,7 +22,7 @@
  * THE SOFTWARE.
  * -->
 <div class="oj-hybrid-padding">
-    <h3>CalOrders Dashboard</h3>
+    <h2>Administrator Dashboard</h2>
     <div id="dashboardContainer" class="oj-panel oj-flex">
 
 
@@ -81,7 +81,7 @@
         <!-- UPPER RIGHT QUADRANT -->
         <div id="innerRightContainer" class="oj-panel oj-flex-item">
 
-            <h3>Order Status</h3>
+            <h3>Current Order Status Summary</h3>
             <div id='activeOrdersPanel'>
 
                 <div id="pieChart" data-bind="ojComponent: {
