added shadow to content panes on all pages

--- a/CalOrdersJET/src/js/views/about.html
+++ b/CalOrdersJET/src/js/views/about.html
@@ -23,7 +23,7 @@
  * -->
 <div id="aboutWrapperDiv" class="oj-hybrid-padding">
     <h2>About CalOrders</h2>
-    <div class="oj-panel oj-flex">
+    <div class="oj-panel oj-flex oj-panel-shadow-md">
         <div id="profilePicturePanel" class="oj-panel oj-flex-item">
                 <img alt="employeePicture" src="../css/images/184313628.jpg" height="300" width="400"/>
             </div>
