--- a/CalOrdersJET/src/js/views/cart.html
+++ b/CalOrdersJET/src/js/views/cart.html
@@ -45,7 +45,7 @@
 
 
     <!-- Page Content -->
-    <div class="oj-panel oj-flex oj-sm-flex-wrap-nowrap">
+    <div class="oj-panel oj-flex oj-sm-flex-wrap-nowrap oj-panel-shadow-md">
         <div id="cartWrapperDiv" class="oj-panel oj-flex-item oj-sm-flex-wrap-nowrap">
             <!-- ko if: ready -->
             <div id="productlistview" >
