--- a/CalOrdersJET/src/js/views/dashboard.html
+++ b/CalOrdersJET/src/js/views/dashboard.html
@@ -23,7 +23,7 @@
  * -->
 <div class="oj-hybrid-padding">
     <h2>Administrator Dashboard</h2>
-    <div id="dashboardContainer" class="oj-panel oj-flex">
+    <div id="dashboardContainer" class="oj-panel oj-flex oj-panel-shadow-md">
 
 
         <!-- LEFT UPPER QUADRAANT -->
