--- a/CalOrdersJET/src/js/views/login.html
+++ b/CalOrdersJET/src/js/views/login.html
@@ -25,7 +25,7 @@
 
     <div class="oj-form">
 
-        <div class="oj-panel oj-flex">
+        <div class="oj-panel oj-flex oj-panel-shadow-md">
 
             <div id="loginPicturePanel" class="oj-panel oj-flex-item">
                 <img id="loginPicture" alt="loginPicture" src="../css/images/186915307.jpg" height="300" width="400"/>
