--- a/CalOrdersJET/src/js/views/orderHistory.html
+++ b/CalOrdersJET/src/js/views/orderHistory.html
@@ -23,6 +23,6 @@
  * -->
 <div class="oj-hybrid-padding">
   <h2>Order History</h2>
-    <div class="oj-panel oj-flex">
+    <div class="oj-panel oj-flex oj-panel-shadow-md">
     </div>    
 </div>
