--- a/CalOrdersJET/src/js/views/productAdd.html
+++ b/CalOrdersJET/src/js/views/productAdd.html
@@ -71,7 +71,7 @@ THE SOFTWARE.
 
                 <div class="oj-padding-vertical"></div>
 
-                <div id="productContentPanel" class="oj-panel oj-flex-item">
+                <div id="productContentPanel" class="oj-panel oj-flex-item oj-panel-shadow-md">
                     <div class='oj-form-layout'>
                         <!-- Product Name -->
                         <div class="oj-flex">  
