--- a/CalOrdersJET/src/js/views/productCompare.html
+++ b/CalOrdersJET/src/js/views/productCompare.html
@@ -37,7 +37,7 @@
     </div>
 
     <!-- Page Content -->
-    <div id="productCompareWrapperDiv" class="oj-panel oj-flex-item">
+    <div id="productCompareWrapperDiv" class="oj-panel oj-flex-item oj-panel-shadow-md">
         <div class="justifyCenter">
 
             <!-- Product Compare Results -->
