--- a/CalOrdersJET/src/js/views/productSearch.html
+++ b/CalOrdersJET/src/js/views/productSearch.html
@@ -44,7 +44,7 @@
     </div>
     <!-- end global error message -->
 
-    <div class="oj-panel oj-flex oj-sm-flex-wrap-nowrap">
+    <div class="oj-panel oj-flex oj-sm-flex-wrap-nowrap oj-panel-shadow-md">
 
 
         <!-- Product Left Hand Navigation Panel -->
