--- a/CalOrdersJET/src/js/views/productUpdate.html
+++ b/CalOrdersJET/src/js/views/productUpdate.html
@@ -45,7 +45,7 @@ THE SOFTWARE.
         </div>
         <!-- end success dialog box -->
 
-        <div class="oj-panel oj-sm-12 oj-flex">
+        <div class="oj-panel oj-sm-12 oj-flex oj-panel-shadow-md">
 
 
             <h2>Add Product</h2>
