--- a/CalOrdersJET/src/js/views/orderConfirmation.html
+++ b/CalOrdersJET/src/js/views/orderConfirmation.html
@@ -25,7 +25,7 @@
 
     <!-- Page Title -->
     <div id="pageTitleContainer" class="oj-flex-item oj-sm-6">
-        <h1 style="margin-bottom:0">Order Confirmation</h1>
+        <h2 style="margin-bottom:0">Order Confirmation</h2>
          
 
     </div>
@@ -50,7 +50,7 @@
         
 
     <!-- Page Content -->
-    <div class="oj-panel oj-flex oj-sm-flex-wrap-nowrap">
+    <div class="oj-panel oj-flex oj-sm-flex-wrap-nowrap oj-panel-shadow-md">
 
        
 
