--- a/CalOrdersJET/src/js/views/productDetail.html
+++ b/CalOrdersJET/src/js/views/productDetail.html
@@ -38,7 +38,7 @@
 
     <!-- Page Content -->
 
-    <div class="oj-panel oj-flex-item">
+    <div class="oj-panel oj-flex-item oj-panel-shadow-md">
 
         <div class="oj-flex">
             <!-- Image -->
