updated shadow on welcome

--- a/CalOrdersJET/src/js/views/welcome.html
+++ b/CalOrdersJET/src/js/views/welcome.html
@@ -23,11 +23,11 @@
  * -->
 <div id="welcomeWrapperDiv" class="oj-hybrid-padding">
 
-    <div class="oj-panel oj-flex">
+    <div class="oj-panel oj-flex oj-panel-shadow-md">
         <div id="welcomePicturePanel" class="oj-panel oj-flex-item">
             <img alt="welcomePicture" src="../css/images/482190423.jpg" height="300" width="400"/>
         </div>
-        <div id="welcomeWrapperDiv" class="oj-panel oj-flex-item oj-panel-shadow-md">
+        <div id="welcomeWrapperDiv" class="oj-panel oj-flex-item">
             <h2>Welcome to CalOrders</h2>
             <div class="oj-padding-vertical"/>
             <p>CalOrders is a prototype developed by OnCore Consulting, LLC for the California Department of Technology.</p>
