--- a/CalOrdersJET/src/js/views/cart.html
+++ b/CalOrdersJET/src/js/views/cart.html
@@ -78,17 +78,19 @@
                             <div>
 
                                 <div class="oj-flex-item oj-sm-4">
-                                    <img alt="product image" data-bind="attr: {id: 'productImage' + $data['prdUid'], src: $parent.getPhoto($data)}" height="100" width="100"/>
+                                    <img style="float:left;" 
+                                                 height="100" width="100" 
+                                                 data-bind="attr: {alt: $data['prdName'], id: 'productImage' + $data['prdUid'], src: $parent.getPhoto($data)}"/>
                                 </div>
                                 <div class="oj-flex-item">
-                                    <h3 aria-label="product description" data-bind="text: $data['prdName']" tabindex="0"></h3>
+                                    <h3 aria-label="product name" data-bind="text: $data['prdName']"></h3>
                                     <!-- ko if: $data['relatedServices']().length > 0 -->
-                                    <label for="relatedServices">Related Services:</label>
-                                    <select id="relatedServices" 
+                                    <label data-bind="attr: {for: relatedServices + $data['prdUid']}">Available Services:</label>
+                                    <select 
                                             data-bind="ojComponent: {
                                     component: 'ojSelect', value: $data['selectedRelatedService'], required: false,
                                     options: $data['relatedServices'],
-                                rootAttributes: {style:'max-width:20em'}}">
+                                rootAttributes: {style:'max-width:20em'}},attr: {id: relatedServices + $data['prdUid']}">
                                     </select> 
                                     <button id= "addRelatedService" 
                                             data-bind="click: $parent.addRelatedService, ojComponent: { component: 'ojButton', label: 'Add Related Service' }">
@@ -107,7 +109,7 @@
                          value:$data['quantity'],
                          rootAttributes: {style:'max-width:40px; padding-right:20px'}}"/>
                                     </div>
-                                    <span>Price: </span><div class="demo-employee-tenure" data-bind="text: '$' + $data['prdPrice']"></div>
+                                    <span>Price: </span><div data-bind="text: '$' + $data['prdPrice']"></div>
                                 </div>
                             </div>
 
@@ -137,25 +139,25 @@
                                 <div>
                                     <div class="oj-flex oj-flex-items-pad">
                                         <div class="oj-flex-item oj-lg-4 oj-md-4">
-                                            <img alt="product image" class="demo-circular demo-employee-photo" style="float:left;" 
+                                            <img style="float:left;" 
                                                  height="100" width="100" 
-                                                 data-bind="attr: {id: 'productImage' + $data['prdUid'], src: $parent.getPhoto($data)}"/>
-                                            <div class="demo-employee-name" data-bind="text: $data['prdName']"></div>    
+                                                 data-bind="attr: {alt: $data['prdName'], id: 'productImage' + $data['prdUid'], src: $parent.getPhoto($data)}"/>
+                                            <div aria-label="product name" data-bind="text: $data['prdName']"></div>    
                                             <!-- ko if: $data['relatedServices']().length > 0 -->
-                                            <label for="relatedServices">Related Services:</label>
-                                            <select id="relatedServices" 
+                                            <label data-bind="attr: {for: relatedServices + $data['prdUid']}">Available Services:</label>
+                                            <select 
                                                     data-bind="ojComponent: {
                                     component: 'ojSelect', value: $data['selectedRelatedService'], required: false,
                                     options: $data['relatedServices'],
-                                rootAttributes: {style:'max-width:20em'}}">
-                                            </select> 
+                                rootAttributes: {style:'max-width:20em'}},attr: {id: relatedServices + $data['prdUid']}"/>
+                                           
                                             <button id= "addRelatedService" 
                                                     data-bind="click: $parent.addRelatedService, ojComponent: { component: 'ojButton', label: 'Add Related Service' }">
                                             </button> 
                                             <!-- /ko -->
                                         </div>
                                         <div class="oj-flex-item oj-sm-12 oj-lg-2">
-                                            <input aria-label="quantity"
+                                            <input aria-label="quantity" id="quantity"
                                                    data-bind="ojComponent: {
                          component: 'ojInputNumber', 
                          max:10000,
@@ -169,7 +171,7 @@
                                         <div class="oj-flex-item oj-lg-5 oj-md-4">
 
                                             <div class="oj-flex-item oj-sm-only-hide oj-md-4 oj-md-float-end">
-                                                <span>Price: </span><div class="demo-employee-tenure" data-bind="text: '$' + $data['prdPrice']"></div>
+                                                <span>Price: </span><div data-bind="text: '$' + $data['prdPrice']"></div>
                                             </div>
                                         </div>
 
