[#139518003][#139518467] Updated the product detail to include additional fields on the page: List Price, Discount Price, Discount, Vendor, SLU, Contract Line Item, Manufacturer, Manufacturer Part Number, Product Unit, Category

--- a/CalOrdersJET/src/css/calorders.css
+++ b/CalOrdersJET/src/css/calorders.css
@@ -123,8 +123,29 @@
 
 .product-detail-price {
     font-size:20px;
+    color: #a01010;
 }
 
+.product-detail-specification-label {
+    padding-left: 25px; 
+    padding-top: 10px;
+    color: gray;
+}
 
+.product-compare-table table {
+  width: 100%;
+}
+
+.product-compare-table table, tr, td {
+  border: 1px solid gray;
+}
+
+.product-compare-table tr, td {
+  padding: 15px;
+}
+   
+.product-search-name {
+    padding-left: 50px;
+}
 
 
