--- a/CalOrdersJET/src/js/views/productSearch.html
+++ b/CalOrdersJET/src/js/views/productSearch.html
@@ -391,11 +391,11 @@
             <div data-bind="click: $parent.navigateToProductDetail">
 
                 <div class="oj-flex-item oj-sm-4">
-                    <img alt="product" data-bind="attr: {id: 'productImage' + $data['prdUid'], src: $parent.getPhoto($data)}" height="100" width="100"/>
+                    <img data-bind="attr: {alt: $data['prdName'],  id: 'productImage' + $data['prdUid'], src: $parent.getPhoto($data)}" height="100" width="100"/>
                 </div>
                 <div class="oj-flex-item">
                     <h3 aria-label="product description" data-bind="text: $data['prdName']" tabindex="0"></h3>
-                    <div data-bind="text: '$' + $data['prdPrice']"></div>
+                    <div class="product-detail-price" data-bind="text: '$' + $data['prdCntrUnitPrice']"></div>
                 </div>
             </div>
 
@@ -443,12 +443,12 @@
         <div>
             <div class="oj-flex oj-flex-items-pad">
                 <div class="oj-flex-item oj-lg-4 oj-md-4" data-bind="click: $parent.navigateToProductDetail">
-                    <img alt="product" class="demo-circular demo-employee-photo" style="float:left;" height="100" width="100" data-bind="attr: {id: 'productImage' + $data['prdUid'], src: $parent.getPhoto($data)}"/>
-                    <h2 class="demo-employee-name" data-bind="text: $data['prdName']"></h2>
+                    <img style="float:left;" height="100" width="100" data-bind="attr: {alt: $data['prdName'],  id: 'productImage' + $data['prdUid'], src: $parent.getPhoto($data)}"/>
+                    <h2 class="product-search-name" data-bind="text: $data['prdName']"></h2>
                 </div>
 
                 <div class="oj-flex-item oj-md-4">
-                    <div class="demo-employee-tenure" data-bind="text: '$' + $data['prdPrice']"></div>
+                    <div class="product-detail-price" data-bind="text: '$' + $data['prdCntrUnitPrice']"></div>
                 </div>
 
                 <div class="oj-flex-item oj-md-4 oj-sm-float-end">
