[#139518467] Updated the Product Detail page to support viewing  when the user is an admin.  This involved hiding the quantity and 'Add to Cart' button.  Also added the 'Status' field on the page so the admin would know if the product was active or inactive.  Also added a 'Back to Search Results' link

--- a/CalOrdersJET/src/js/views/productCompare.html
+++ b/CalOrdersJET/src/js/views/productCompare.html
@@ -36,6 +36,8 @@
         <div class="oj-padding-vertical"></div>
     </div>
 
+    <a data-bind="click: navigateToProductSearch">Back to Search Results</a>
+
     <table class="product-compare-table">
         <tr>
             <td class="product-detail-name">Product</td>
