[#139582141] Displayed the discounted price on the Cart.

--- a/CalOrdersJET/src/js/views/cart.html
+++ b/CalOrdersJET/src/js/views/cart.html
@@ -109,7 +109,7 @@
                          value:$data['quantity'],
                          rootAttributes: {style:'max-width:40px; padding-right:20px'}}"/>
                                     </div>
-                                    <span>Price: </span><div data-bind="text: '$' + $data['prdPrice']"></div>
+                                    <span>Price: </span><div data-bind="text: '$' + $data['prdCntrUnitPrice']"></div>
                                 </div>
                             </div>
 
@@ -171,7 +171,7 @@
                                         <div class="oj-flex-item oj-lg-5 oj-md-4">
 
                                             <div class="oj-flex-item oj-sm-only-hide oj-md-4 oj-md-float-end">
-                                                <span>Price: </span><div data-bind="text: '$' + $data['prdPrice']"></div>
+                                                <span>Price: </span><div data-bind="text: '$' + $data['prdCntrUnitPrice']"></div>
                                             </div>
                                         </div>
 
