--- a/CalOrdersJET/src/js/views/orderHistory.html
+++ b/CalOrdersJET/src/js/views/orderHistory.html
@@ -24,26 +24,23 @@
 <div id="orderHistoryWrapper" class="oj-hybrid-padding">
     <h2>Order History</h2>
     <div class="oj-panel oj-flex">
-        <div id="orderHistoryContent" class="oj-hybrid-padding">
-            <div id="orderHistoryTableContent" class="oj-md-12 oj-flex-item page-padding">
-                <div class="page-padding">
-                    <div id="orderHistoryTable">
-                        <table id="table" summary="Order History Table" aria-label="Order History Table"
-                               data-bind="ojComponent: {component: 'ojTable', 
-                                selectionMode: {row: 'multiple', column: 'multiple'}, data: datasource, 
-                                columns: [{headerText: 'Order No.', field: 'orderId', sortable: 'enabled'},
-                                  {headerText: 'Date', field: 'orderDate', sortable: 'enabled'},
-                                  {headerText: 'Status', field: 'orderStatus', sortable: 'enabled'},   
-                                  {headerText: 'PO. Number', field: 'orderPoNumber', sortable: 'enabled'},
-                                  {headerText: 'Agency', field: 'orderAgency', sortable: 'enabled'},
-                                  {headerText: 'Price', field: 'orderPrice', sortable: 'enabled'},
-                                  {headerText: 'Description', field: 'orderDescription', sortable: 'enabled'}], 
-                                 rootAttributes: {'style':'width: 100%;'}}">
-                        </table>
-                        <div id="paging" data-bind="ojComponent: {component: 'ojPagingControl', data: datasource, pageSize: 5}">
-                        </div>
-                    </div>
-                    <br/><br/>
+        <div id="orderHistoryTableContent" class="oj-md-12 oj-flex-item page-padding">
+            <div id="orderHistoryTable">
+                <table id="table" summary="Order History Table" aria-label="Order History Table"
+                       data-bind="ojComponent: {component: 'ojTable', 
+                                selectionMode: {row: 'multiple', column: 'multiple'}, data: datasource,
+                                display: 'grid',
+                                columnsDefault: {sortable: 'enabled'}, 
+                                columns: [{headerText: 'Order No.', field: 'orderHistoryId', sortable: 'enabled', style: 'min-width: 10%; max-width: 33%'},
+                                  {headerText: 'Date', field: 'orderDate', sortable: 'enabled', style: 'max-width: 33%'},
+                                  {headerText: 'Status', field: 'orderStatus', sortable: 'enabled', style: 'max-width: 33%'},   
+                                  {headerText: 'PO. Number', field: 'orderPoNumber', sortable: 'enabled', style: 'width: 10%', headerClassName: 'oj-sm-only-hide', className: 'oj-sm-only-hide'},
+                                  {headerText: 'Agency', field: 'orderAgency', sortable: 'enabled', style: 'width: 20%', headerClassName: 'oj-sm-only-hide', className: 'oj-sm-only-hide'},
+                                  {headerText: 'Price', field: 'orderPrice', sortable: 'enabled', style: 'width: 10%', headerClassName: 'oj-sm-only-hide', className: 'oj-sm-only-hide'},
+                                  {headerText: 'Description', field: 'orderDescription', sortable: 'enabled', style: 'width: 30%',headerClassName: 'oj-sm-only-hide', className: 'oj-sm-only-hide'}], 
+                                 rootAttributes: {'style':'width: 100%'}}">
+                </table>
+                <div id="paging" data-bind="ojComponent: {component: 'ojPagingControl', data: datasource, pageSize: 10}">
                 </div>
             </div>
         </div>
