[#139963273][#139565189] Update Product page and Add Product Page. The Update Product page is linkable from the product detail page. the page is mostly functional accept for the image. The Add product and update product page now has the ability to inactivate a product.

--- a/CalOrdersJET/src/js/views/productAdd.html
+++ b/CalOrdersJET/src/js/views/productAdd.html
@@ -268,7 +268,7 @@ THE SOFTWARE.
                         <div class="oj-flex"> 
                             <div class="oj-flex-item">
                                 <label id="productContractUnitPriceLabel" for="productContractUnitPrice">Product Contract Unit Price:</label>
-                                $<span id="productContractUnitPrice" data-bind="text:productContractUnitPrice" aria-labelledby="productContractUnitPriceLabel"></span>
+                                <span id="productContractUnitPrice" data-bind="text:productContractUnitPriceDisplay" aria-labelledby="productContractUnitPriceLabel"></span>
                             </div>
                         </div>
                         <br>
